--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "test",
+  "name": "vite-rest-api",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "dist/server.js",
+  "bin": "bin/start",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "vite",
+    "start": "node dist/server.js",
+    "dev": "vite-node --watch src/server.js",
+    "test": "vitest run",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.0.1"
+    "supertest": "^7.0.0",
+    "vite": "^6.0.1",
+    "vitest": "^2.1.8"
+  },
+  "dependencies": {
+    "express": "^4.21.1",
+    "minimist": "^1.2.8"
   }
 }
