--- a/package.json
+++ b/package.json
@@ -11,11 +11,31 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "vite-node --watch src/server.js",
-    "test": "vitest run",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint",
+    "lint:changed": "eslint --no-warn-ignored $(git diff --name-only --diff-filter=d HEAD)",
+    "lint:fix": "npm run lint:changed -- --fix",
+    "lint:inspect": "npx eslint --inspect-config",
+    "precommit": "npm run lint:changed",
+    "check-updates": "npx npm-check-updates -u --target semver",
+    "update-deps": "npm run check-updates && npm install && npm audit fix",
+    "clean": "npx rimraf .nyc_output coverage dist",
+    "test": "npm run test:unit:coverage",
+    "test:unit": "vitest run",
+    "test:unit:coverage": "vitest run --coverage",
+    "test:coverage": "npm run clean && npm run test:unit:coverage && npx http-server -p 8888 coverage/lcov-report"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.11.2",
+    "@rushstack/eslint-patch": "^1.10.4",
+    "@vitest/coverage-istanbul": "^2.1.8",
+    "eslint": "^9.16.0",
+    "eslint-plugin-format": "^0.1.3",
+    "npm-check-updates": "^17.1.11",
+    "prettier": "^3.4.2",
+    "rimraf": "^6.0.1",
+    "simple-git-hooks": "^2.11.1",
     "supertest": "^7.0.0",
     "vite": "^6.0.1",
     "vitest": "^2.1.8"
