--- a/package.json
+++ b/package.json
@@ -23,17 +23,25 @@
     "clean": "npx rimraf .nyc_output coverage dist",
     "test": "npm run test:unit:coverage",
     "test:unit": "vitest run",
+    "test:unit:watch": "vitest",
     "test:unit:coverage": "vitest run --coverage",
     "test:coverage": "npm run clean && npm run test:unit:coverage && npx http-server -p 8888 coverage/lcov-report"
   },
   "dependencies": {
+    "compression": "^1.7.5",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
-    "minimist": "^1.2.8"
+    "helmet": "^8.0.0",
+    "http-status": "^2.0.0",
+    "minimist": "^1.2.8",
+    "morgan": "^1.10.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.11.2",
     "@rushstack/eslint-patch": "^1.10.4",
     "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-v8": "^2.1.8",
     "eslint": "^9.16.0",
     "eslint-plugin-format": "^0.1.3",
     "npm-check-updates": "^17.1.11",
