refactor: remove redundant use of 'npx'

--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "lint": "eslint",
     "lint:changed": "eslint --no-warn-ignored $(git diff --name-only --diff-filter=d HEAD)",
     "lint:fix": "npm run lint:changed -- --fix",
-    "lint:inspect": "npx eslint --inspect-config",
+    "lint:inspect": "eslint --inspect-config",
     "precommit": "npm run lint:changed",
-    "check-updates": "npx npm-check-updates -u --target semver",
+    "check-updates": "npm-check-updates -u --target semver",
     "update-deps": "npm run check-updates && npm install && npm audit fix",
-    "clean": "npx rimraf .nyc_output coverage dist",
+    "clean": "rimraf .nyc_output coverage dist",
     "test": "npm run test:unit:coverage",
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
