--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "express-jwt": "^8.4.1",
     "helmet": "^8.0.0",
     "http-status": "^2.0.0",
     "minimist": "^1.2.8",
